2009-04-20  Mark Ellis  <mark@mpellis.org.uk>

	* catch uninitialized RapiContext in function calls
	* tidy up headers and shared constants, remove unused
	  rapi_types.h
	* implement reference counting on RapiContext

2009-04-11  Mark Ellis  <mark@mpellis.org.uk>

	* if RapiContext is auto-generated, keep it's SynceInfo
	  for later reference

2009-04-09  Mark Ellis  <mark@mpellis.org.uk>

	* use synce_info_get_ functions to obtain SynceInfo parameters;
	  new rapi_connection_get_ functions to give access to SynceInfo
	* allow access to rapi conn through python object

2009-03-27  Mark Ellis  <mark@mpellis.org.uk>

	* enhance pyrapi2 registry query_value, some small fixes
	* move file operations into a pythonic file-type class, and
	  move some file op flags into constants.pxi as enums
	* declare all non-python functions as nogil
	* add pydocs

2009-03-26  Mark Ellis  <mark@mpellis.org.uk>

	* adjust RapiSession to allow for multiple devices,
	  accept device name for constructor

2009-03-23  Mark Ellis  <mark@mpellis.org.uk>

	* configure.ac.in - require pyrex >= 0.9.6 for gil releasing

2009-03-04  Mark Ellis  <mark@mpellis.org.uk>

	* tools/pls.c - if no path arg, don't append backslash to
	  My Documents path, causes wrong behaviour in rapi1
	* tools/pcp.c - fixes to directory copying, many thanks to
	  Pierre Ynard and cipe007 for patches

2009-02-17  Mark Ellis  <mark@mpellis.org.uk>

	* tools/pls.c - fix bug in listing single directory arguement
	* tools/man/pls.1 - add comment on protecting wildcards from
	  shell expansion

2009-02-01  Mark Ellis  <mark@mpellis.org.uk>

	* src/rapi/database.c - more parameter checking, enable open
	  database by name
	* src/rapi/misc.c - fix database data translation in CeOidGetInfo
	* tools/ - add prototype database tool

2009-01-29  Mark Ellis  <mark@mpellis.org.uk>

	* src/support/rapi_buffer.c - check buffer has space for trailing
	  NULL in rapi_buffer_read_string()